--- a/coffe-shop-client/index.html
+++ b/coffe-shop-client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/coffeIMG.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>coffe-shop-client</title>
+    <title>Craft Coffe Shop</title>
   </head>
   <body>
     <div id="root"></div>
